--- a/etecia/index.html
+++ b/etecia/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
@@ -8,7 +9,8 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Etecia | Home</title>
-    </head>
+</head>
+
 <body>
     <header class="header">
         <nav class="header-nav">
@@ -20,19 +22,26 @@
         </nav>
     </header>
     <main>
-<body>
-    <img src="images/scbk.jpg" class="body-image" alt="fotoTemporaria" width="1900" height="650">
-</body>
+
+        <body>
+            <img src="images/eteciaft.jpg" class="body-image" alt="fotoTemporaria" width="1900" height="650">
+        </body>
     </main>
 
 
     <div class="footer">
-            <nav class="footer-nav">
-                <a href="mobilePage.html" class="mobile-link"><img src="images/mobile.png" alt="link-mobile-app" height="60" width="100"></a>
-                <a href="index.html" class="logo-link"><img src="images/etecialogo.png" alt="etecia-logo" height="35" width="35"></a>
-                <a href="youtube.com" class="insta-link"><img src="images/instagram.png" alt="link-instagram-etecia" height="35" width="34"></a>
-                <a href="youtube.com" class="-link"><img src="images/youtube.png" alt="link=youtube-etecia" height="35" width="34"></a>
-            </nav>
-    </footer>
+        <nav class="footer-nav">
+            <a href="mobilePage.html" class="mbl-link"><img src="images/mobile.png" alt="link-mobile-app" height="60"
+                    width="100"></a>
+            <a href="index.html" class="cps-link"><img src="images/nlogocps.png" alt="cps-logo" height="50"
+                    width="75"></a>
+            <a href="index.html" class="sp-link"><img src="images/splogo.png" alt="sp-logo" height="50" width="100"></a>
+            <a href="youtube.com" class="insta-link"><img src="images/instagram.png" alt="link-instagram-etecia"
+                    height="35" width="34"></a>
+            <a href="youtube.com" class="yt-link"><img src="images/youtube.png" alt="link=youtube-etecia" height="35"
+                    width="34"></a>
+        </nav>
+        </footer>
 </body>
+
 </html>
