--- a/etecia/index.html
+++ b/etecia/index.html
@@ -16,7 +16,6 @@
         <nav class="header-nav">
             <a href="index.html" class="outros-link">home</a>
             <a href="sobre.html" class="outros-link">sobre</a>
-            <a href="index.html" class="etecia-link">etecia</a>
             <a href="matricula.html" class="outros-link">matrícula</a>
             <a href="login.html" class="outros-link">aluno</a>
         </nav>
@@ -31,15 +30,16 @@
 
     <div class="footer">
         <nav class="footer-nav">
-            <a href="mobilePage.html" class="mbl-link"><img src="images/mobile.png" alt="link-mobile-app" height="60"
-                    width="100"></a>
+            <img src="images/etecialogo.png" class="etecia-link" width="130" height="60">
+            <a href="mobilePage.html" class="mbl-link"><img src="images/mobileapp.png" alt="link-mobile-app" height="58"
+                    width="130"></a>
             <a href="index.html" class="cps-link"><img src="images/nlogocps.png" alt="cps-logo" height="50"
                     width="75"></a>
             <a href="index.html" class="sp-link"><img src="images/splogo.png" alt="sp-logo" height="50" width="100"></a>
             <a href="youtube.com" class="insta-link"><img src="images/instagram.png" alt="link-instagram-etecia"
-                    height="35" width="34"></a>
-            <a href="youtube.com" class="yt-link"><img src="images/youtube.png" alt="link=youtube-etecia" height="35"
-                    width="34"></a>
+                    height="70" width="70"></a>
+            <a href="youtube.com" class="yt-link"><img src="images/youtube.png" alt="link=youtube-etecia" height="70"
+                    width="70"></a>
         </nav>
         </footer>
 </body>
